Alteração codigo main.JAVA